# ikon-auth

./: .env.example  .gitignore  LICENCE  LICENSE  README.md  pyproject.toml
example/aiohttp_auth_test/: app.py  requirements.txt
example/bottle_app/: app.py  requirements.txt
example/django_auth_test/: db.sqlite3  manage.py  requirements.txt
example/django_auth_test/api/: views.py
example/django_auth_test/django_app/: settings.py  urls.py  wsgi.py
example/falcon_auth_test/: app.py  requirements.txt
example/fast_auth_test/: main.py  requirements.txt
example/flusk_auth_test/: app.py  requirements.txt
example/sanic_auth_test/: app.py  requirements.txt
example/starlette_auth_test/: app.py  requirements.txt
example/tornado_auth_test/: app.py  requirements.txt
src/ikon_auth/: __init__.py  config.py  dependencies.py  jwks_provider.py  oauth_provider.py
